--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "Bandar",
         "BANDARABAS",
         "ESFAHAN",
+        "lprofile",
         "uidb",
         "YAZD",
         "ZAHEDAN"
